--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Air Quality Monitoring System</string>
     <string name="led_status">Led Status</string>
     <string name="toggle_led">Toggle Led</string>
 </resources>
